Início do crud do carro